--- a/g16.tools.rc
+++ b/g16.tools.rc
@@ -2,22 +2,53 @@
 
 # This is an example rc file
 
-# The following two lines give the location of the installation.
-# These are important to make this script work.
-# (They can be hardcoded into the script itself.)
+# The following lines give the location or commands
+# of the installation of necessary (and optional) programs.
+# These are important to make any of the scripts work.
+# (They could also be hardcoded into the script itself,
+# but within this file it should be easier.)
 
 # General path to the g16 directory (this should work on every system)
 #
-  installpath_g16="/path/is/not/set"
+  g16_installpath="/path/is/not/set"
 
 # Define where scratch files shall be written to
 #
   g16_scratch="$TEMP"
 
-# On the RWTH cluster gaussian is loaded via a module system,
-# enter the name of the module here:
+# On the RWTH cluster Gaussian is loaded via a module system,
+# enter the names of the modules to be loaded here.
+# They have to appear in the correct order.
 # 
-  g16_module="gaussian/16.a03_bin"
+  g16_modules[0]="CHEMISTRY"
+  g16_modules[1]="gaussian/16.a03_bin"
+
+# Set the commands or paths for utilities:
+# - formatted checkpoint files
+#   
+#   Tools-for-g16 wrapper (if found in path)
+#   g16_formchk_cmd="g16.wrapper.sh formchk" # ( - TO DO - )
+#   A command that executes formchk
+#   (-3 for verson 3 fchk; that is the default in the wrapper above)
+    g16_formchk_cmd="wrapper.g16 formchk -3" # ( Current workaround )
+#   Local install with formchk found in PATH
+#   g16_formchk_cmd="formchk -3" 
+#   The hard coded path to the binary works also.
+#   bin_formchk_cmd="/path/to/g09/formchk -3"
+#
+
+# This script requires an installation of Open Babel.
+# (It's syntax is:
+#    obabel [-i<in-type>] <in-file> [-o<out-type>] -O<out-file>
+# If you have added it to your $PATH, then
+#
+  obabel_cmd="obabel"
+#
+# should be enough.
+#
+# Otherwise, provide the path to the binary
+#  bin_babel="/path/to/openbabel/bin/obabel"
+#
 
 #
 # Setting some more defaults
