--- a/g16.tools.rc
+++ b/g16.tools.rc
@@ -9,16 +9,28 @@
 # but within this file it should be easier.)
 
 # General path to the g16 directory (this should work on every system)
+# [Default: /path/is/not/set]
 #
   g16_installpath="/path/is/not/set"
 
 # Define where scratch files shall be written to
+# [Default: $TEMP]
 #
   g16_scratch="$TEMP"
 
+# Define the overhead you'd like to give Gaussian in MB 
+# [Default: 2000]
+#
+  g16_overhead=2000
+
+# If a modular software management is available, use it?
+# [Default: true]
+#
+  load_modules="true"
+#
 # On the RWTH cluster Gaussian is loaded via a module system,
 # enter the names of the modules to be loaded here.
-# They have to appear in the correct order.
+# They have to appear in the correct order (if they happen to depend on each other).
 # 
   g16_modules[0]="CHEMISTRY"
   g16_modules[1]="gaussian/16.a03_bin"
@@ -29,7 +41,7 @@
 #   
 #   Tools-for-g16 wrapper (if found in path)
 #   g16_formchk_cmd="g16.wrapper.sh formchk" # ( - TO DO - )
-#   A command that executes formchk
+#   Any command that executes formchk
     g16_formchk_cmd="wrapper.g16 formchk" # ( Current workaround )
 #   Local install with formchk found in PATH
 #   g16_formchk_cmd="formchk" 
@@ -42,11 +54,11 @@
 #   g16_formchk_opts=""
 #   otherwise the scripts will use '-3' as option.
 #
-# - checking the route section
+# - checking the route section (this is similar to above)
 #   
 #   Tools-for-g16 wrapper (if found in path)
 #   g16_testrt_cmd="g16.wrapper.sh testrt" # ( - TO DO - )
-#   A command that executes testrt
+#   Any command that executes testrt
     g16_testrt_cmd="wrapper.g16 testrt" # ( Current workaround )
 #   Local install with testrt found in PATH
 #   g16_testrt_cmd="testrt" 
@@ -61,19 +73,26 @@
 #
   obabel_cmd="obabel"
 #
-# should be enough.
+# should be enough. (Or is you use a wrapper, enter the command here.)
 #
 # Otherwise, provide the path to the binary
-#  bin_babel="/path/to/openbabel/bin/obabel"
+# obabel_cmd="/path/to/openbabel/bin/obabel"
 #
 
-#
-# Setting some more defaults
-#
+# Default files and suffixes
+# 
+  g16_input_suffix="com"
+  g16_output_suffix="log"
 
-# Print all information by default
+# Default options for printing and verbosity
 #
+  values_separator=" " # (space separated values)
+  output_verbosity=0
   stay_quiet=0
+
+#
+# Default values for the queueing system
+#
 
 # Specify default Walltime in [[HH:]MM:]SS
 #
@@ -90,13 +109,15 @@
 # The default which should be written to the inputfile
 # regarding disk space (in MB)
 #
-# requested_maxdisk=30000
+  requested_maxdisk=30000
 
 # Select a queueing system (pbs-gen/bsub-rwth)
 #
   request_qsys="bsub-rwth"
 
-# Account to project (only for rwth)
+# Account to project (only for bsub)
 #
 # bsub_project=default
 
+# Calculations will be submitted to run (hold/keep)
+requested_submit_status="run"
