--- a/configure/mcs.std.rc
+++ b/configure/mcs.std.rc
@@ -53,10 +53,28 @@ declare -a g16_modules='([0]="CHEMISTRY" [1]="gaussian/16.b01_bin")'
   obabel_cmd="obabel"
 #
 
-# Default files and suffixes
+# Default files, suffixes, and other for Gaussian 16
 # 
   g16_input_suffix="com"
   g16_output_suffix="log"
+#
+# Predefined Route sections
+  g16_route_section_default="#P B97D3/def2SVP/W06   DenFit"
+  g16_route_section_predefined[0]="# PM6"
+  g16_route_section_predefined[1]="#P B97D3/def2SVP/W06   DenFit"
+  g16_route_section_predefined[2]="#P B97D3/def2TZVPP/W06 DenFit"
+  g16_route_section_predefined[3]="#P B97D3/def2SVP/W06   DenFit opt(MaxCycle=100,VeryTight) scf(xqc) int(ultrafinegrid) gfinput gfoldprint iop(6/7=3) symmetry(loose)"
+  g16_route_section_predefined[4]="#P B97D3/def2TZVPP/W06 DenFit opt(MaxCycle=100,VeryTight) scf(xqc) int(ultrafinegrid) gfinput gfoldprint iop(6/7=3) symmetry(loose)"
+  g16_route_section_predefined[5]="#P B97D3/def2SVP/W06   DenFit opt(AddGIC,MaxCycle=100,VeryTight) scf(xqc) int(ultrafinegrid) gfinput gfoldprint iop(6/7=3) symmetry(loose)"
+  g16_route_section_predefined[6]="#P B97D3/def2TZVPP/W06 DenFit opt(AddGIC,MaxCycle=100,VeryTight) scf(xqc) int(ultrafinegrid) gfinput gfoldprint iop(6/7=3) symmetry(loose)"
+  g16_route_section_predefined[7]="#P B97D3/def2SVP/W06   DenFit scrf(smd,solvent=water) opt(AddGIC,MaxCycle=100,VeryTight) scf(xqc) int(ultrafinegrid) gfinput gfoldprint iop(6/7=3) symmetry(loose)"
+  g16_route_section_predefined[8]="#P B97D3/def2TZVPP/W06 DenFit scrf(smd,solvent=water) opt(AddGIC,MaxCycle=100,VeryTight) scf(xqc) int(ultrafinegrid) gfinput gfoldprint iop(6/7=3) symmetry(loose)"
+  g16_route_section_predefined[9]="#P BP86/def2SVP/W06   DenFit EmpiricalDispersion=GD3BJ int(ultrafinegrid) opt(MaxCycle=100, VeryTight)  scf(xqc) gfinput gfoldprint iop(6/7=3) symmetry(loose)"
+  g16_route_section_predefined[10]="#P BP86/def2TZVPP/W06 DenFit EmpiricalDispersion=GD3BJ int(ultrafinegrid) opt(MaxCycle=100, VeryTight)  scf(xqc) gfinput gfoldprint iop(6/7=3) symmetry(loose)"
+  g16_route_section_predefined[11]="#P BP86/def2SVP/W06   DenFit EmpiricalDispersion=GD3BJ int(ultrafinegrid) opt(AddGIC,MaxCycle=100, VeryTight)  scf(xqc) gfinput gfoldprint iop(6/7=3) symmetry(loose)"
+  g16_route_section_predefined[12]="#P BP86/def2TZVPP/W06 DenFit EmpiricalDispersion=GD3BJ int(ultrafinegrid) opt(AddGIC,MaxCycle=100, VeryTight)  scf(xqc) gfinput gfoldprint iop(6/7=3) symmetry(loose)"
+  g16_route_section_predefined[13]="#P BP86/def2SVP/W06   DenFit EmpiricalDispersion=GD3BJ int(ultrafinegrid) scrf(smd,solvent=water) opt(AddGIC,MaxCycle=100, VeryTight)  scf(xqc) gfinput gfoldprint iop(6/7=3) symmetry(loose)"
+  g16_route_section_predefined[14]="#P BP86/def2TZVPP/W06 DenFit EmpiricalDispersion=GD3BJ int(ultrafinegrid) scrf(smd,solvent=water) opt(AddGIC,MaxCycle=100, VeryTight)  scf(xqc) gfinput gfoldprint iop(6/7=3) symmetry(loose)"
 #
 
 # Default options for printing and verbosity
@@ -91,10 +109,10 @@ declare -a g16_modules='([0]="CHEMISTRY" [1]="gaussian/16.b01_bin")'
 
 # Account to project (only for bsub)
 #
-  bsub_project="rwth0317"
+# bsub_project=default
 
 # Calculations will be submitted to run (hold/keep)
   requested_submit_status="run"
 
 #
-# End of automatic configuration, Thu Jul 12 17:31:25 CEST 2018.
+# End of automatic configuration, Thu Aug  9 17:17:29 CEST 2018.
