--- a/g16.tools.rc
+++ b/g16.tools.rc
@@ -79,10 +79,22 @@
 # obabel_cmd="/path/to/openbabel/bin/obabel"
 #
 
-# Default files and suffixes
+# Default files, suffixes, and other for Gaussian 16
 # 
   g16_input_suffix="com"
   g16_output_suffix="log"
+#
+# Predefined Route sections
+#
+  g16_route_section_default="# B97D3/def2SVP"
+  g16_route_section_predefined[00]="# PM6"
+  g16_route_section_predefined[01]="#P B97D3/def2SVP"
+  g16_route_section_predefined[02]="#P B97D3/def2TZVP"
+  g16_route_section_predefined[03]="#P B97D3/def2TZVPP"
+  g16_route_section_predefined[11]="#P BP86/def2SVP   EmpiricalDispersion=GD3BJ"
+  g16_route_section_predefined[12]="#P BP86/def2TZVP  EmpiricalDispersion=GD3BJ"
+  g16_route_section_predefined[13]="#P BP86/def2TZVPP EmpiricalDispersion=GD3BJ"
+#
 
 # Default options for printing and verbosity
 #
