--- a/g16.tools.rc
+++ b/g16.tools.rc
@@ -131,5 +131,9 @@
 #
 # bsub_project=default
 
+# Request a certain machine type (only for bsub)
+#
+# bsub_machinetype=default
+
 # Calculations will be submitted to run (hold/keep)
 requested_submit_status="run"
