--- a/g16.tools.rc
+++ b/g16.tools.rc
@@ -14,9 +14,9 @@
   g16_installpath="/path/is/not/set"
 
 # Define where scratch files shall be written to
-# [Default: $TEMP]
+# [Default: \$TEMP]
 #
-  g16_scratch="$TEMP"
+  g16_scratch="\$TEMP"
 
 # Define the overhead you'd like to give Gaussian in MB 
 # [Default: 2000]
@@ -33,7 +33,11 @@
 # They have to appear in the correct order (if they happen to depend on each other).
 # 
   g16_modules[0]="CHEMISTRY"
-  g16_modules[1]="gaussian/16.b03_bin"
+  g16_modules[1]="gaussian/16.b01_bin"
+# 
+# or
+# g16_modules=( "CHEMISTRY" "gaussian/16.b01_bin" )
+#
 
 # Set the commands or paths for utilities:
 #
@@ -88,12 +92,14 @@
 #
   g16_route_section_default="# B97D3/def2SVP"
   g16_route_section_predefined[00]="# PM6"
-  g16_route_section_predefined[01]="#P B97D3/def2SVP"
-  g16_route_section_predefined[02]="#P B97D3/def2TZVP"
-  g16_route_section_predefined[03]="#P B97D3/def2TZVPP"
-  g16_route_section_predefined[11]="#P BP86/def2SVP   EmpiricalDispersion=GD3BJ"
-  g16_route_section_predefined[12]="#P BP86/def2TZVP  EmpiricalDispersion=GD3BJ"
-  g16_route_section_predefined[13]="#P BP86/def2TZVPP EmpiricalDispersion=GD3BJ"
+  g16_route_section_predefined[01]="#P B97D3/def2SVP/W06                            DenFit"
+  g16_route_section_predefined[02]="#P B97D3/def2TZVPP/W06                          DenFit"
+  g16_route_section_predefined[11]="#P BP86/def2SVP/W06   EmpiricalDispersion=GD3BJ DenFit"
+  g16_route_section_predefined[12]="#P BP86/def2TZVPP/W06 EmpiricalDispersion=GD3BJ DenFit"
+  g16_route_section_predefined[21]="#P PBE1PBE/def2SVP    EmpiricalDispersion=GD3BJ"
+  g16_route_section_predefined[22]="#P PBE1PBE/def2TZVPP  EmpiricalDispersion=GD3BJ"
+  g16_route_section_predefined[31]="#P B3LYP/def2SVP      EmpiricalDispersion=GD3BJ"
+  g16_route_section_predefined[32]="#P B3LYP/def2TZVPP    EmpiricalDispersion=GD3BJ"
 #
 
 # Default options for printing and verbosity
