--- a/configure/mcs.min.rc
+++ b/configure/mcs.min.rc
@@ -62,18 +62,16 @@ declare -a g16_modules='([0]="CHEMISTRY" [1]="gaussian/16.b01_bin")'
   g16_output_suffix="log"
 #
 # Predefined Route sections
-  g16_route_section_default="# B97D3/def2SVP"
+  g16_route_section_default="#P BP86/def2SVP/W06 EmpiricalDispersion=GD3BJ DenFit"
   g16_route_section_predefined[0]="# PM6"
   g16_route_section_predefined[1]="#P B97D3/def2SVP/W06                            DenFit"
   g16_route_section_predefined[2]="#P B97D3/def2TZVPP/W06                          DenFit"
-  g16_route_section_predefined[3]="#P BP86/def2SVP   EmpiricalDispersion=GD3BJ"
-  g16_route_section_predefined[4]="#P BP86/def2TZVPP EmpiricalDispersion=GD3BJ"
-  g16_route_section_predefined[5]="#P BP86/def2SVP/W06   EmpiricalDispersion=GD3BJ DenFit"
-  g16_route_section_predefined[6]="#P BP86/def2TZVPP/W06 EmpiricalDispersion=GD3BJ DenFit"
-  g16_route_section_predefined[7]="#P PBE1PBE/def2SVP    EmpiricalDispersion=GD3BJ"
-  g16_route_section_predefined[8]="#P PBE1PBE/def2TZVPP  EmpiricalDispersion=GD3BJ"
-  g16_route_section_predefined[9]="#P B3LYP/def2SVP      EmpiricalDispersion=GD3BJ"
-  g16_route_section_predefined[10]="#P B3LYP/def2TZVPP    EmpiricalDispersion=GD3BJ"
+  g16_route_section_predefined[3]="#P BP86/def2SVP/W06   EmpiricalDispersion=GD3BJ DenFit"
+  g16_route_section_predefined[4]="#P BP86/def2TZVPP/W06 EmpiricalDispersion=GD3BJ DenFit"
+  g16_route_section_predefined[5]="#P PBE1PBE/def2SVP    EmpiricalDispersion=GD3BJ"
+  g16_route_section_predefined[6]="#P PBE1PBE/def2TZVPP  EmpiricalDispersion=GD3BJ"
+  g16_route_section_predefined[7]="#P B3LYP/def2SVP      EmpiricalDispersion=GD3BJ"
+  g16_route_section_predefined[8]="#P B3LYP/def2TZVPP    EmpiricalDispersion=GD3BJ"
 #
 
 # Default options for printing and verbosity
@@ -88,7 +86,7 @@ declare -a g16_modules='([0]="CHEMISTRY" [1]="gaussian/16.b01_bin")'
 
 # Specify default Walltime in [[HH:]MM:]SS
 #
-  requested_walltime="72:00:00"
+  requested_walltime="48:00:00"
 
 # Specify a default value for the memory (does not include overhead)
 #
