--- a/configure/mcs.ext.rc
+++ b/configure/mcs.ext.rc
@@ -62,30 +62,27 @@ declare -a g16_modules='([0]="CHEMISTRY" [1]="gaussian/16.b01_bin")'
   g16_output_suffix="log"
 #
 # Predefined Route sections
-  g16_route_section_default="#P B97D3/def2SVP/W06   DenFit"
-  g16_route_section_predefined[0]="# PM6"
-  g16_route_section_predefined[1]="#P B97D3/def2SVP/W06   DenFit"
-  g16_route_section_predefined[2]="#P B97D3/def2TZVP/W06  DenFit"
-  g16_route_section_predefined[3]="#P B97D3/def2TZVPP/W06 DenFit"
-  g16_route_section_predefined[4]="#P B97D3/def2SVP/W06   DenFit opt(MaxCycle=100,VeryTight) scf(xqc) int(ultrafinegrid) gfinput gfoldprint iop(6/7=3) symmetry(loose)"
-  g16_route_section_predefined[5]="#P B97D3/def2TZVP/W06  DenFit opt(MaxCycle=100,VeryTight) scf(xqc) int(ultrafinegrid) gfinput gfoldprint iop(6/7=3) symmetry(loose)"
-  g16_route_section_predefined[6]="#P B97D3/def2TZVPP/W06 DenFit opt(MaxCycle=100,VeryTight) scf(xqc) int(ultrafinegrid) gfinput gfoldprint iop(6/7=3) symmetry(loose)"
-  g16_route_section_predefined[7]="#P B97D3/def2SVP/W06   DenFit opt(TS,CalcFC,noeigentest,MaxCycle=100,VeryTight) scf(xqc) int(ultrafinegrid) gfinput gfoldprint iop(6/7=3) symmetry(loose)"
-  g16_route_section_predefined[8]="#P B97D3/def2TZVP/W06  DenFit opt(TS,CalcFC,noeigentest,MaxCycle=100,VeryTight) scf(xqc) int(ultrafinegrid) gfinput gfoldprint iop(6/7=3) symmetry(loose)"
-  g16_route_section_predefined[9]="#P B97D3/def2TZVPP/W06 DenFit opt(TS,CalcFC,noeigentest,MaxCycle=100,VeryTight) scf(xqc) int(ultrafinegrid) gfinput gfoldprint iop(6/7=3) symmetry(loose)"
-  g16_route_section_predefined[10]="#P B97D3/def2SVP/W06   DenFit opt(AddGIC,MaxCycle=100,VeryTight) scf(xqc) int(ultrafinegrid) gfinput gfoldprint iop(6/7=3) symmetry(loose)"
-  g16_route_section_predefined[11]="#P B97D3/def2TZVP/W06  DenFit opt(AddGIC,MaxCycle=100,VeryTight) scf(xqc) int(ultrafinegrid) gfinput gfoldprint iop(6/7=3) symmetry(loose)"
-  g16_route_section_predefined[12]="#P B97D3/def2TZVPP/W06 DenFit opt(AddGIC,MaxCycle=100,VeryTight) scf(xqc) int(ultrafinegrid) gfinput gfoldprint iop(6/7=3) symmetry(loose)"
-  g16_route_section_predefined[13]="#P B97D3/def2SVP/W06   DenFit scrf(smd,solvent=water) opt(AddGIC,MaxCycle=100,VeryTight) scf(xqc) int(ultrafinegrid) gfinput gfoldprint iop(6/7=3) symmetry(loose)"
-  g16_route_section_predefined[14]="#P B97D3/def2TZVP/W06  DenFit scrf(smd,solvent=water) opt(AddGIC,MaxCycle=100,VeryTight) scf(xqc) int(ultrafinegrid) gfinput gfoldprint iop(6/7=3) symmetry(loose)"
-  g16_route_section_predefined[15]="#P B97D3/def2TZVPP/W06 DenFit scrf(smd,solvent=water) opt(AddGIC,MaxCycle=100,VeryTight) scf(xqc) int(ultrafinegrid) gfinput gfoldprint iop(6/7=3) symmetry(loose)"
-  g16_route_section_predefined[16]="#P BP86/def2SVP/W06   DenFit EmpiricalDispersion=GD3BJ int(ultrafinegrid) opt(MaxCycle=100, VeryTight)  scf(xqc) gfinput gfoldprint iop(6/7=3) symmetry(loose)"
-  g16_route_section_predefined[17]="#P BP86/def2TZVPP/W06 DenFit EmpiricalDispersion=GD3BJ int(ultrafinegrid) opt(MaxCycle=100, VeryTight)  scf(xqc) gfinput gfoldprint iop(6/7=3) symmetry(loose)"
-  g16_route_section_predefined[18]="#P BP86/def2SVP/W06   DenFit EmpiricalDispersion=GD3BJ int(ultrafinegrid) opt(AddGIC,MaxCycle=100, VeryTight)  scf(xqc) gfinput gfoldprint iop(6/7=3) symmetry(loose)"
-  g16_route_section_predefined[19]="#P BP86/def2TZVPP/W06 DenFit EmpiricalDispersion=GD3BJ int(ultrafinegrid) opt(AddGIC,MaxCycle=100, VeryTight)  scf(xqc) gfinput gfoldprint iop(6/7=3) symmetry(loose)"
-  g16_route_section_predefined[20]="#P BP86/def2SVP/W06   DenFit EmpiricalDispersion=GD3BJ int(ultrafinegrid) scrf(smd,solvent=water) opt(AddGIC,MaxCycle=100, VeryTight)  scf(xqc) gfinput gfoldprint iop(6/7=3) symmetry(loose)"
-  g16_route_section_predefined[21]="#P BP86/def2TZVPP/W06 DenFit EmpiricalDispersion=GD3BJ int(ultrafinegrid) scrf(smd,solvent=water) opt(AddGIC,MaxCycle=100, VeryTight)  scf(xqc) gfinput gfoldprint iop(6/7=3) symmetry(loose)"
-  g16_route_section_predefined[22]="#P TPSSh/def2TZVP opt(MaxCycle=100,VeryTight) scf(xqc) int(ultrafinegrid) gfinput gfoldprint iop(6/7=3) EmpiricalDispersion=GD3BJ IOp(3/174=1000000) IOp(3/175=2238200) IOp(3/177=452900) IOp(3/178=4655000)"
+  g16_route_section_default="# P B97D3/def2SVP/W06 DenFit  "
+  g16_route_section_predefined[0]="# PM6 OPT(loose,maxcycles=500)  "
+  g16_route_section_predefined_comment[0]=" semi-empirical method optimisation, very quick "
+  g16_route_section_predefined[1]="# P B97D3/def2SVP/W06 DenFit  "
+  g16_route_section_predefined_comment[1]=" Single point, pure DFA with dens. fitting, D3 corr. (Becke-Johnson damping), double zeta BS "
+  g16_route_section_predefined[2]="# P B97D3/def2SVP/W06 DenFit opt(MaxCycle=100,Tight) scf(xqc) int(ultrafinegrid) gfinput gfoldprint iop(6/7=3) symmetry(loose)  "
+  g16_route_section_predefined_comment[2]=" Optimisation, pure DFA with dens. fitting, D3 corr. (Becke-Johnson damping), double zeta BS "
+  g16_route_section_predefined[3]="# P B97D3/def2SVP/W06   DenFit opt(TS,CalcFC,noeigentest,MaxCycle=100,Tight) scf(xqc) int(ultrafinegrid) gfinput gfoldprint iop(6/7=3) symmetry(loose)  "
+  g16_route_section_predefined_comment[3]=" Transition State Opt., pure DFA with dens. fitting, D3 corr. (Becke-Johnson damping), double zeta BS "
+  g16_route_section_predefined[4]="# P B97D3/def2SVP/W06 DenFit opt(AddGIC,MaxCycle=100,Tight) scf(xqc) int(ultrafinegrid) gfinput gfoldprint iop(6/7=3) symmetry(loose)  "
+  g16_route_section_predefined_comment[4]=" Constrained opt. (needs another input section), pure DFA with dens. fitting, D3 corr. (Becke-Johnson damping), double zeta BS "
+  g16_route_section_predefined[5]="# P B97D3/def2SVP/W06   DenFit scrf(smd,solvent=water) opt(AddGIC,MaxCycle=100,Tight) scf(xqc) int(ultrafinegrid) gfinput gfoldprint iop(6/7=3) symmetry(loose)  "
+  g16_route_section_predefined_comment[5]=" Constrained opt. (needs another input section), including solvent correction, pure DFA with dens. fitting, D3 corr. (Becke-Johnson damping), double zeta BS "
+  g16_route_section_predefined[6]="# P BP86/def2SVP/W06 DenFit EmpiricalDispersion=GD3BJ int(ultrafinegrid) opt(MaxCycle=100, Tight) scf(xqc) gfinput gfoldprint iop(6/7=3) symmetry(loose)  "
+  g16_route_section_predefined_comment[6]=" Optimisation, pure DFA with dens. fitting, D3 corr. (Becke-Johnson damping), double zeta BS "
+  g16_route_section_predefined[7]="# P BP86/def2SVP/W06   DenFit EmpiricalDispersion=GD3BJ int(ultrafinegrid) opt(AddGIC,MaxCycle=100, VeryTight)  scf(xqc) gfinput gfoldprint iop(6/7=3) symmetry(loose)  "
+  g16_route_section_predefined_comment[7]=" Optimisation (GIC), pure DFA with dens. fitting, D3 corr. (Becke-Johnson damping), double zeta BS "
+  g16_route_section_predefined[8]="# P BP86/def2SVP/W06   DenFit EmpiricalDispersion=GD3BJ int(ultrafinegrid) scrf(smd,solvent=water) opt(GIC,MaxCycle=100, Tight)  scf(xqc) gfinput gfoldprint iop(6/7=3) symmetry(loose)  "
+  g16_route_section_predefined_comment[8]=" Optimisation (GIC), solvent model,  pure DFA with dens. fitting, D3 corr. (Becke-Johnson damping), double zeta BS "
+  g16_route_section_predefined[9]="# P TPSSh/def2SVP opt(MaxCycle=100,Tight) scf(xqc) int(ultrafinegrid) gfinput gfoldprint iop(6/7=3) EmpiricalDispersion=GD3BJ IOp(3/174=1000000) IOp(3/175=2238200) IOp(3/177=452900) IOp(3/178=4655000)  "
+  g16_route_section_predefined_comment[9]=" Optimisation, Hybrid functional TPSSh with double zeta BS and dispersion coefficients set via IOps "
 #
 
 # Default options for printing and verbosity
@@ -100,7 +97,7 @@ declare -a g16_modules='([0]="CHEMISTRY" [1]="gaussian/16.b01_bin")'
 
 # Specify default Walltime in [[HH:]MM:]SS
 #
-  requested_walltime="120:00:00"
+  requested_walltime="60:00:00"
 
 # Specify a default value for the memory (does not include overhead)
 #
@@ -114,24 +111,25 @@ declare -a g16_modules='([0]="CHEMISTRY" [1]="gaussian/16.b01_bin")'
 #
   requested_maxdisk="30000"
 
-# Select a queueing system (pbs-gen/bsub-rwth)
+# Select a queueing system <queue>-<special>
+# (<queue>: pbs, slurm, bsub; <special>: gen, rwth)
 #
-  request_qsys="bsub-rwth"
+  request_qsys="slurm-rwth"
 
-# Account to project (only for bsub)
+# Account to project (bsub) or account (slurm)
 #
-  qsys_project="default"
+# qsys_project=default
 
-# Sent notifications to the following email address (only for bsub)
+# Sent notifications to the following email address (slurm, bsub)
 #
-  user_email="default"
+# user_email=default@default.com
 
 # Use following machine type (only for bsub)
 #
-  bsub_machinetype="default"
+# bsub_machinetype=default
 
 # Calculations will be submitted to run (hold/keep)
   requested_submit_status="run"
 
 #
-# End of automatic configuration, Tue Feb 26 22:00:29 CET 2019.
+# End of automatic configuration, Mon Apr 29 15:24:30 CEST 2019.
