--- a/configure/mcs.min.rc
+++ b/configure/mcs.min.rc
@@ -62,16 +62,25 @@ declare -a g16_modules='([0]="CHEMISTRY" [1]="gaussian/16.b01_bin")'
   g16_output_suffix="log"
 #
 # Predefined Route sections
-  g16_route_section_default="#P BP86/def2SVP/W06 EmpiricalDispersion=GD3BJ DenFit"
+  g16_route_section_default="# P B97D3/def2SVP/W06 DenFit  "
   g16_route_section_predefined[0]="# PM6"
-  g16_route_section_predefined[1]="#P B97D3/def2SVP/W06                            DenFit"
-  g16_route_section_predefined[2]="#P B97D3/def2TZVPP/W06                          DenFit"
-  g16_route_section_predefined[3]="#P BP86/def2SVP/W06   EmpiricalDispersion=GD3BJ DenFit"
-  g16_route_section_predefined[4]="#P BP86/def2TZVPP/W06 EmpiricalDispersion=GD3BJ DenFit"
-  g16_route_section_predefined[5]="#P PBE1PBE/def2SVP    EmpiricalDispersion=GD3BJ"
-  g16_route_section_predefined[6]="#P PBE1PBE/def2TZVPP  EmpiricalDispersion=GD3BJ"
-  g16_route_section_predefined[7]="#P B3LYP/def2SVP      EmpiricalDispersion=GD3BJ"
-  g16_route_section_predefined[8]="#P B3LYP/def2TZVPP    EmpiricalDispersion=GD3BJ"
+  g16_route_section_predefined_comment[0]="semi-empirical method (default route)"
+  g16_route_section_predefined[1]="# P B97D3/def2SVP/W06 DenFit  "
+  g16_route_section_predefined_comment[1]=" pure DFT method with density fitting, DFT-D3 with Becke-Johnson damping, double zeta BS "
+  g16_route_section_predefined[2]="# P B97D3/def2TZVPP/W06 DenFit  "
+  g16_route_section_predefined_comment[2]=" pure DFT method with density fitting, DFT-D3 with Becke-Johnson damping, triple zeta BS "
+  g16_route_section_predefined[3]="# P BP86/def2SVP/W06   EmpiricalDispersion=GD3BJ DenFit  "
+  g16_route_section_predefined_comment[3]=" pure DFT method with density fitting, DFT-D3 with Becke-Johnson damping, double zeta BS "
+  g16_route_section_predefined[4]="# P BP86/def2TZVPP/W06 EmpiricalDispersion=GD3BJ DenFit  "
+  g16_route_section_predefined_comment[4]=" pure DFT method with density fitting, DFT-D3 with Becke-Johnson damping, triple zeta BS "
+  g16_route_section_predefined[5]="# P PBE1PBE/def2SVP    EmpiricalDispersion=GD3BJ  "
+  g16_route_section_predefined_comment[5]=" hybrid DFT method, DFT-D3 with Becke-Johnson damping, double zeta BS "
+  g16_route_section_predefined[6]="# P PBE1PBE/def2TZVPP  EmpiricalDispersion=GD3BJ  "
+  g16_route_section_predefined_comment[6]=" hybrid DFT method, DFT-D3 with Becke-Johnson damping, triple zeta BS "
+  g16_route_section_predefined[7]="# P B3LYP/def2SVP      EmpiricalDispersion=GD3BJ  "
+  g16_route_section_predefined_comment[7]=" hybrid DFT method, DFT-D3 with Becke-Johnson damping, double zeta BS "
+  g16_route_section_predefined[8]="# P B3LYP/def2TZVPP    EmpiricalDispersion=GD3BJ  "
+  g16_route_section_predefined_comment[8]=" hybrid DFT method, DFT-D3 with Becke-Johnson damping, triple zeta BS "
 #
 
 # Default options for printing and verbosity
@@ -90,34 +99,35 @@ declare -a g16_modules='([0]="CHEMISTRY" [1]="gaussian/16.b01_bin")'
 
 # Specify a default value for the memory (does not include overhead)
 #
-  requested_memory="512"
+  requested_memory="2000"
 
 # Set the number of professors doing the calculation
 #
-  requested_numCPU="4"
+  requested_numCPU="8"
 
 # The default which should be written to the inputfile regarding disk space (in MB)
 #
   requested_maxdisk="30000"
 
-# Select a queueing system (pbs-gen/bsub-rwth)
+# Select a queueing system <queue>-<special>
+# (<queue>: pbs, slurm, bsub; <special>: gen, rwth)
 #
-  request_qsys="bsub-rwth"
+  request_qsys="slurm-rwth"
 
-# Account to project (only for bsub)
+# Account to project (bsub) or account (slurm)
 #
-  qsys_project="default"
+# qsys_project=default
 
-# Sent notifications to the following email address (only for bsub)
+# Sent notifications to the following email address (slurm, bsub)
 #
-  user_email="default"
+# user_email=default@default.com
 
 # Use following machine type (only for bsub)
 #
-  bsub_machinetype="default"
+# bsub_machinetype=default
 
 # Calculations will be submitted to run (hold/keep)
   requested_submit_status="run"
 
 #
-# End of automatic configuration, Tue Feb 26 21:55:30 CET 2019.
+# End of automatic configuration, Mon Apr 29 10:18:00 CEST 2019.
