--- a/configure/mcs.std.rc
+++ b/configure/mcs.std.rc
@@ -62,23 +62,39 @@ declare -a g16_modules='([0]="CHEMISTRY" [1]="gaussian/16.b01_bin")'
   g16_output_suffix="log"
 #
 # Predefined Route sections
-  g16_route_section_default="#P B97D3/def2SVP/W06   DenFit"
+  g16_route_section_default="# P B97D3/def2SVP/W06 DenFit  "
   g16_route_section_predefined[0]="# PM6"
-  g16_route_section_predefined[1]="#P B97D3/def2SVP/W06   DenFit"
-  g16_route_section_predefined[2]="#P B97D3/def2TZVPP/W06 DenFit"
+  g16_route_section_predefined_comment[0]="semi-empirical method (default route)"
+  g16_route_section_predefined[1]="# P B97D3/def2SVP/W06 DenFit  "
+  g16_route_section_predefined_comment[1]="pure DFA method with DFT-D3 with Becke-Johnson damping, double zeta BS "
+  g16_route_section_predefined[2]="# P B97D3/def2TZVPP/W06 DenFit  "
+  g16_route_section_predefined_comment[2]="pure DFA method with density fitting, DFT-D3 with Becke-Johnson damping, triple zeta BS "
   g16_route_section_predefined[3]="#P B97D3/def2SVP/W06   DenFit opt(MaxCycle=100,VeryTight) scf(xqc) int(ultrafinegrid) gfinput gfoldprint iop(6/7=3) symmetry(loose)"
+  g16_route_section_predefined_comment[3]="pure DFA with dens. fitting double zeta, optimisation, and molden keywords"
   g16_route_section_predefined[4]="#P B97D3/def2TZVPP/W06 DenFit opt(MaxCycle=100,VeryTight) scf(xqc) int(ultrafinegrid) gfinput gfoldprint iop(6/7=3) symmetry(loose)"
+  g16_route_section_predefined_comment[4]="pure DFA with dens. fitting triple zeta, optimisation, and molden keywords"
   g16_route_section_predefined[5]="#P B97D3/def2SVP/W06   DenFit opt(AddGIC,MaxCycle=100,VeryTight) scf(xqc) int(ultrafinegrid) gfinput gfoldprint iop(6/7=3) symmetry(loose)"
+  g16_route_section_predefined_comment[5]="uses GIC and needs another input section! pure DFA with dens. fitting double zeta, optimisation, and molden keywords"
   g16_route_section_predefined[6]="#P B97D3/def2TZVPP/W06 DenFit opt(AddGIC,MaxCycle=100,VeryTight) scf(xqc) int(ultrafinegrid) gfinput gfoldprint iop(6/7=3) symmetry(loose)"
+  g16_route_section_predefined_comment[6]="uses GIC and needs another input section! pure DFA with dens. fitting triple zeta, optimisation, and molden keywords"
   g16_route_section_predefined[7]="#P B97D3/def2SVP/W06   DenFit scrf(smd,solvent=water) opt(AddGIC,MaxCycle=100,VeryTight) scf(xqc) int(ultrafinegrid) gfinput gfoldprint iop(6/7=3) symmetry(loose)"
+  g16_route_section_predefined_comment[7]="like above, uses solvent"
   g16_route_section_predefined[8]="#P B97D3/def2TZVPP/W06 DenFit scrf(smd,solvent=water) opt(AddGIC,MaxCycle=100,VeryTight) scf(xqc) int(ultrafinegrid) gfinput gfoldprint iop(6/7=3) symmetry(loose)"
+  g16_route_section_predefined_comment[8]="like above, uses solvent"
   g16_route_section_predefined[9]="#P PM6 SCF=xqc OPT(MaxCycle=500,loose)"
+  g16_route_section_predefined_comment[9]="semi-empirical optimisation, very low cost"
   g16_route_section_predefined[10]="#P BP86/def2SVP/W06   DenFit EmpiricalDispersion=GD3BJ int(ultrafinegrid) opt(MaxCycle=100, VeryTight)  scf(xqc) gfinput gfoldprint iop(6/7=3) symmetry(loose)"
+  g16_route_section_predefined_comment[10]="pure DFA with dens. fitting, double zeta"
   g16_route_section_predefined[11]="#P BP86/def2TZVPP/W06 DenFit EmpiricalDispersion=GD3BJ int(ultrafinegrid) opt(MaxCycle=100, VeryTight)  scf(xqc) gfinput gfoldprint iop(6/7=3) symmetry(loose)"
+  g16_route_section_predefined_comment[11]="oure DFA with dens. fitting, triple zeta"
   g16_route_section_predefined[12]="#P BP86/def2SVP/W06   DenFit EmpiricalDispersion=GD3BJ int(ultrafinegrid) opt(AddGIC,MaxCycle=100, VeryTight)  scf(xqc) gfinput gfoldprint iop(6/7=3) symmetry(loose)"
+  g16_route_section_predefined_comment[12]="like above, uses GIC and needs additional input section"
   g16_route_section_predefined[13]="#P BP86/def2TZVPP/W06 DenFit EmpiricalDispersion=GD3BJ int(ultrafinegrid) opt(AddGIC,MaxCycle=100, VeryTight)  scf(xqc) gfinput gfoldprint iop(6/7=3) symmetry(loose)"
+  g16_route_section_predefined_comment[13]="like above, uses GIC and needs additional input section"
   g16_route_section_predefined[14]="#P BP86/def2SVP/W06   DenFit EmpiricalDispersion=GD3BJ int(ultrafinegrid) scrf(smd,solvent=water) opt(AddGIC,MaxCycle=100, VeryTight)  scf(xqc) gfinput gfoldprint iop(6/7=3) symmetry(loose)"
+  g16_route_section_predefined_comment[14]="like above, uses solvent, uses GIC and needs additional input section"
   g16_route_section_predefined[15]="#P BP86/def2TZVPP/W06 DenFit EmpiricalDispersion=GD3BJ int(ultrafinegrid) scrf(smd,solvent=water) opt(AddGIC,MaxCycle=100, VeryTight)  scf(xqc) gfinput gfoldprint iop(6/7=3) symmetry(loose)"
+  g16_route_section_predefined_comment[15]="like above, uses solvent, uses GIC and needs additional input section"
 #
 
 # Default options for printing and verbosity
@@ -93,7 +109,7 @@ declare -a g16_modules='([0]="CHEMISTRY" [1]="gaussian/16.b01_bin")'
 
 # Specify default Walltime in [[HH:]MM:]SS
 #
-  requested_walltime="120:00:00"
+  requested_walltime="72:00:00"
 
 # Specify a default value for the memory (does not include overhead)
 #
@@ -107,24 +123,25 @@ declare -a g16_modules='([0]="CHEMISTRY" [1]="gaussian/16.b01_bin")'
 #
   requested_maxdisk="30000"
 
-# Select a queueing system (pbs-gen/bsub-rwth)
+# Select a queueing system <queue>-<special>
+# (<queue>: pbs, slurm, bsub; <special>: gen, rwth)
 #
-  request_qsys="bsub-rwth"
+  request_qsys="slurm-rwth"
 
-# Account to project (only for bsub)
+# Account to project (bsub) or account (slurm)
 #
-  qsys_project="default"
+# qsys_project=default
 
-# Sent notifications to the following email address (only for bsub)
+# Sent notifications to the following email address (slurm, bsub)
 #
-  user_email="default"
+# user_email=default@default.com
 
 # Use following machine type (only for bsub)
 #
-  bsub_machinetype="default"
+# bsub_machinetype=default
 
 # Calculations will be submitted to run (hold/keep)
   requested_submit_status="run"
 
 #
-# End of automatic configuration, Tue Feb 26 21:58:11 CET 2019.
+# End of automatic configuration, Mon Apr 29 13:26:24 CEST 2019.
