--- a/configure/mcs.min.rc
+++ b/configure/mcs.min.rc
@@ -83,10 +83,20 @@ declare -a g16_modules='([0]="CHEMISTRY" [1]="gaussian/16.b01_bin")'
   g16_route_section_predefined_comment[8]=" hybrid DFT method, DFT-D3 with Becke-Johnson damping, triple zeta BS "
 #
 
+#
 # Default options for printing and verbosity
 #
-  values_separator=" " # (space separated values)
+
+# Delimit values in the printout with 'space' (default)/ 'comma'/ 'semicolon'/ 'colon'/ 'slash'/ 'pipe' 
+#
+  values_delimiter="space"
+
+# Corresponds to any switches '-v' (default: 0)
+#
   output_verbosity=0
+
+# Corresponds to any switches '-s' that silence the output (default: 0)
+#
   stay_quiet=0
 
 #
@@ -118,9 +128,25 @@ declare -a g16_modules='([0]="CHEMISTRY" [1]="gaussian/16.b01_bin")'
 #
 # qsys_project=default
 
-# Sent notifications to the following email address (slurm, bsub)
+# Deliver the default queuing system email
+# Values are for using this '1/yes/active' (default) or not using it '0/no/disabled'
+#
+  qsys_email="active"
+
 #
 # user_email=default@default.com
+
+# Activate/deactivate sending extra mail (this is a configuration file only option)
+# Values are for using this '1/yes/active' or not using it (default) '0/no/disabled'
+#
+  xmail_interface="disabled"
+#
+# Provide the interface command (this can be any script/binary)
+# The routine uses 'mail' as a template and sends
+# > mail -s 'a subject line' 
+# This defaults to mail if empty and therefore would send an empty email.
+#
+  xmail_cmd="mail"
 
 # Use following machine type (only for bsub)
 #
@@ -130,4 +156,4 @@ declare -a g16_modules='([0]="CHEMISTRY" [1]="gaussian/16.b01_bin")'
   requested_submit_status="run"
 
 #
-# End of automatic configuration, Mon Apr 29 10:18:00 CEST 2019.
+# End of automatic configuration, Wed May 15 17:54:02 CEST 2019.
