Extended: Versioning for configuration files
Added warning in configuration script and headline for meta information.
Added warnings to the script if an older version of config is detected.

--- a/g16.tools.rc
+++ b/g16.tools.rc
@@ -201,3 +201,9 @@
 
 # Calculations will be submitted to run (hold/keep)
   requested_submit_status="run"
+
+# Meta information:
+# This is to avoid unnecessary warnings, if the configuration has not been performed.
+configured_version="$version"
+configured_versiondate="$versiondate"
+
